--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,6 +1,6 @@
 :root {
     --rosa:  #D68EDC;
-   --fuenteTitulo: 'Tangerine', cursive;
+   --fuenteTitulo: 'Parisienne', cursive;
    --fuenteTituloAlternativa: 'Inter', sans-serif;
 }
 body {
@@ -23,6 +23,22 @@ html {
     padding: 1rem;
     background-color: white;
     box-shadow: 0px 5px 5px 0px rgba(0,0,0,0.50);
+}
+.bienvenidos {
+    width: 20rem;
+    height: 5rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    background-color: rgba(0,0,0,0.2);
+    box-shadow: 0px 5px 5px 0px rgba(0,0,0,0.40);
+    border-radius: 1rem;
+    font-size: 3rem;
+    position: absolute;
+    top: 11%;
+    left: 50%;
+    transform: translate(-50%, -50%);
 }
 .header img {
     width: 5rem;
@@ -57,12 +73,74 @@ html {
     border-radius: 2rem;
 }
 
-
+/* Nosotros */
+.parrafo {
+    font-size: 2rem;
+}
 .nosotros {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
     text-align: center;
     width: 100%;
     height: 30rem;
+    padding: 1rem;
 }
+
+
+/* Nuestros Productos */
+
+.productos div img {
+    width: 40rem;
+    height: 35rem;
+    padding: 1rem;
+    border-radius: 2rem;
+}
+.productos div {
+    margin: 0;
+}
+.productos {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-wrap: wrap;
+  margin-bottom: 10rem;
+}
+
+h2 {
+    text-align: center;
+    font-size: 3rem;
+}
+.producto__parrafo {
+    text-align: center;
+    font-size: 2.5rem;
+}
+
+/* Seccion Contactanos  */
+
+.contenedor-redes {
+    width: 60%;
+    margin: 0 auto;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    margin-bottom: 10rem;
+}
+.redes img{
+    width: 5rem;
+}
+.redes img:hover{
+    cursor: pointer;
+}
+.redes {
+    margin-top: 5rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.redes p {
+    font-size: 1.8rem;
+}
+
 footer {
     text-align: center;
     font-size: 1.5rem;
@@ -73,4 +151,3 @@ footer {
     align-items: center;
     justify-content: center;
 }
-
