--- a/styles/styles.css
+++ b/styles/styles.css
@@ -76,6 +76,7 @@ html {
 /* Nosotros */
 .parrafo {
     font-size: 2rem;
+    width: 80%;
 
     
 }
@@ -87,6 +88,7 @@ html {
     width: 100%;
     height: 30rem;
     padding: 1rem;
+    align-items: center;
 }
 
 
